gcc/testsuite/rust/rustc/ui/enum/suggest-default-attribute_dg.rs
pub enum Test { // { help "" "" { target *-*-* } }
    #[default]
// { dg-error "" "" { target *-*-* } .-1 }
    First,
    Second,
}

fn main() {}

